--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-form": "^1.9.0",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-router": "^1.119.0",
@@ -18,7 +18,8 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
