--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,42 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Visual Studio files
+.vs/
+*.vspscc
+*.vssscc
+*.suo
+*.user
+*.bak
+*.scc
+
+# Build results
+[Dd]ebug/
+[Rr]elease/
+*.exe
+*.pdb
+*.dll
+*.obj
+*.ilk
+*.log
+*.bin
+*.cache
+
+# NuGet packages
+packages/
+*.nupkg
+.nuget/
+project.assets.json # for .NET Core / new SDK-style projects
+
+# Rider files (if using JetBrains Rider)
+.idea/
+
+# Azure DevOps / TFS
+*.tfignore
+
+# Miscellaneous
+Thumbs.db
+.DS_Store # Mac specific
+*.orig
+*.swp # Vim swap files
