--- a/Front/package.json
+++ b/Front/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-form": "^1.9.0",
-    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-router": "^1.119.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
