--- a/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/appsettings.json
+++ b/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "JwtSettings": {
+    "Issuer": "MyApp",
+    "Audience": "MyAppUsers",
+    "SecretKey": "a_very_long_super_secret_key_here"
+  }
 }
