--- a/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/appsettings.json
+++ b/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/appsettings.json
@@ -1,7 +1,7 @@
 {
   "JwtSettings": {
-    "Issuer": "MyApp",
-    "Audience": "MyAppUsers",
-    "SecretKey": "a_very_long_super_secret_key_here"
+    "Issuer": "API-FundacionTamarindoPark",
+    "Audience": "APP-FundacionTamarindoPark",
+    "SecretKey": "a_very_long_super_secret_key_here-FundacionTamarindoPark"
   }
 }
