--- a/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/API-FundacionTamarindoPark.csproj
+++ b/Backend/API-FundacionTamarindoPark/API-FundacionTamarindoPark/API-FundacionTamarindoPark.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.8.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
