--- a/Front/package.json
+++ b/Front/package.json
@@ -20,7 +20,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "lucide-react": "^0.513.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
